# FastAPI-async-tests

./: locust.py  main.py  pyproject.toml
