[tool.poetry]
name = "fastapi-async-tests"
version = "0.1.0"
description = ""
authors = ["Lucas <lucas.ribeiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
locust = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
